fix bug be